﻿==================
### 1.6.3
==================

New features:
- Support for baby classes! Kore will now be able to identify these
  classes correctly.
- Storage kafra password. See storageAuto_password below.
- Ability to evade Freya's anti-bot system.

Bug fixes:
- Vending zeny limit is no longer limited to 10 million.

New config options:
- storageAuto_password (number)
  If your server is using a storage password, put the password here.
  You must also set storageEncryptKey!

- storageEncryptKey (key)
  Put your server's encryption key here. For mRO, it is:
  0x050B6F79, 0x0202C179, 0x00E20120, 0x04FA43E3, 0x0179B6C8, 0x05973DF2, 0x07D8D6B, 0x08CB9ED9

  The key may change in the future.

Credits:
- Harry: Perl implementation of the Crypton encyrption algorithm.


==================
### 1.6.2
==================

*** INCOMPATIBLE CHANGES ***:
- Items named e.g. "Unknown 1234" are now called "Unknown #1234" so that
  you can use their name in items_control.txt.
- The syntax for chat room commands has been changed. See below.
- Many "whenStatus(In)active" names have been changed, so that they're
  consistent with the actual item or skill names.
  For example, the status name for Concentration Potion has been renamed
  from "Concent" to "Concentration Potion", and the status name
  for Increase AGI has been renamed from "Inc Agi" to "Increase AGI".
- dcOnDisconnect must be set to 2 if you want to disconnect when
  you get "Out of sync with server" error.

Bug fixes:
- Fix deal bug: showing twice as many items added.
- Make "Compiles portals now?" prompt case-insensitive.
- Prevent the character select screen from appearing randomly due to
  lag or unparsed packets.
- Storage log not created when relogAfterStorage is active.
- Bot should no longer fail to pick up items dropped by monsters that
  died a distance away.
- Tk map viewer has been fixed.
- Make itemsTakeAuto_party count dmgFromYou too. (Hack to allow